--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Havok - test</title>
+  <title>Havok - test 2</title>
   <link rel="icon" type="image/svg+xml" href="/cube.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:image" content="/assets/havok-test.jpg" />
 </head>
 
 <body>
